--- a/backend/src/Core/Resources/services.yaml
+++ b/backend/src/Core/Resources/services.yaml
@@ -15,3 +15,6 @@ services:
     autowire: true      # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     public: false
+
+  Core\UseCases\:
+    resource: '../UseCases/*'
