want2watch-3 draft
ref #3

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -35,6 +35,7 @@
     "ext-zend-opcache": "^7.4",
     "cebe/php-openapi": "^1.5",
     "doctrine/annotations": "^1.12",
+    "hmerritt/imdb-api": "^1.1",
     "nette/php-generator": "^3.5",
     "psr/log": "^1.1",
     "symfony/console": "^5.3",
