--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "8080:9000"
     volumes:
+      - ".:/app"
       - "~/.composer/auth.json:/root/.composer/auth.json"
     working_dir: "/app"
     command: ["php", "-d", "zend_extension=xdebug.so",
