--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,6 +8,7 @@ defaults:
   run:
     working-directory: backend
 env:
+  DOCKER_MOUNTS: ""
   IMAGE_TAG: "antonmarin/want2watch:latest"
 jobs:
   pipeline:
